# custom_op

./: .gitattributes  .gitignore  README.md  onnx.py
ort_custom_op/: CMakeLists.txt  custom_op.cc  custom_op.h  custom_op_test.cc  run_infer.py
pytorch_custom_op/: run_infer.py  setup.py
pytorch_custom_op/dropout/: compare.py  export_dropout.py
pytorch_custom_op/group_norm/: export_custom_op.py  run_infer.py
pytorch_custom_op/resize/: export_resize_nearest.py
tvm_custom_op/: build.py  config.py  custom_group_norm.cc
tvm_custom_op/dropout/: build.py  edgex_dropout.cc  edgex_dropout.py  env.sh
tvm_custom_op/group_norm/: build.py  custom_group_norm.cc  custom_group_norm.py  edgex.py
tvm_custom_op/resize/: build.py  edgex.py  edgex_resize_nearest.cc  edgex_resize_nearest.py  env.sh  run_iss.py
